fixed loading cover not covering title bar. Changed icons for activity screen and speed icon for graph screen. changed some colours in gui

--- a/src/main/resources/css/dataAnalysis.css
+++ b/src/main/resources/css/dataAnalysis.css
@@ -28,7 +28,7 @@
 .tab-pane
 {
     -fx-background-radius: 1em;
-    -fx-background-color: linear-gradient(#0097A7 0%, #4DD0E1 100%);
+    -fx-background-color: #4DD0E1;
     -fx-border-radius: 1em;
     -fx-border-width: 2px;
     -fx-border-color: #0097A7;
